manifests/whereami/001-ingress-gw.yaml
# Deploy an Ingress Gateway that we will use specifically for our Where Am I service
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway-whereami
  namespace: gateways
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-ingressgateway-whereami
      istio: ingressgateway-whereami
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: istio-ingressgateway-whereami
        istio: ingressgateway-whereami
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: istio-ingressgateway-whereami
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-whereami
  namespace: gateways
  labels:
    app: istio-ingressgateway-whereami
    istio: ingressgateway-whereami
  annotations:
    networking.gke.io/load-balancer-type: "Internal" # Ensure the Load Balancer is Internal
spec:
  ports:
  # status-port exposes a /healthz/ready endpoint that can be used with GKE Ingress health checks
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  # Any ports exposed in Gateway resources should be exposed here.
  - name: http2
    port: 80
  - name: https
    port: 443
  selector:
    istio: ingressgateway-whereami
    app: istio-ingressgateway-whereami
  type: LoadBalancer
  externalTrafficPolicy: Local # Required to ensure the correct source IP
