manifests/whereami/005-whereami-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whereami-b
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: whereami-b
  namespace: whereami-b
  labels:
    app: whereami-b
    service: whereami-b
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: whereami-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whereami-b
  name: whereami-b
  namespace: whereami-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whereami-b
  template:
    metadata:
      labels:
        app: whereami-b
        version: v1
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: whereami-b
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.21
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
