manifests/whereami/whereami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whereami
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: whereami
  namespace: whereami
  labels:
    app: whereami
    service: whereami
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: whereami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whereami
  name: whereami
  namespace: whereami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
        version: v1
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: whereami
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.21
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whereami-gateway
  namespace: whereami
spec:
  selector:
    app: istio-ingressgateway-whereami
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whereami
  namespace: whereami
spec:
  hosts:
  - "*"
  gateways:
  - whereami/whereami-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: whereami
        port:
          number: 8080
